# thank_you_for_coming_to_my_tedtalk

./: pyproject.toml
tests/: test_ted_talk.py
