[tool.poetry]
name = "ted_talk"
version = "0.1.0"
description = ""
authors = ["adpleach <adpleach@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
scipy = "^1.8.0"
sklearn = "^0.0"
jupyterlab = "^3.3.4"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
kaggle = "^1.5.12"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
